--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 64px;
-    padding: 0;
+    padding: 16px;
     border: 0;
 }
 .upper-color
